logs/watchdog_20251012_1645.log
[12/10/2025 16:45:01,62] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 16:45:01,86] END WATCHDOG 
